# JetBrains-IDE-Multiarch

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew.bat  settings.gradle.kts
buildSrc/: build.gradle.kts
buildSrc/src/main/java/: Arch.java  IJFileProcessor.java  IJProcessor.java  Platform.java
config/: README.properties  jdk.properties  natives.properties  product.properties
config/product/: default.properties
native/: .gitignore  README.md  build.sh
native/LinuxGlobalMenu/: CMakeLists.txt
native/XPlatLauncher/: Cargo.toml  build.rs
native/XPlatLauncher/src/: default.rs
native/libdbusmenu/: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.am.enum  Makefile.in  NEWS  README.md  aclocal.m4  config.h.in  configure  configure.ac
native/libdbusmenu/docs/: Makefile.am  Makefile.in
native/libdbusmenu/docs/libdbusmenu-glib/: Makefile.in
native/libdbusmenu/docs/libdbusmenu-glib/reference/: Makefile.am  Makefile.in  libdbusmenu-glib-docs.sgml  libdbusmenu-glib-sections.txt
native/libdbusmenu/docs/libdbusmenu-gtk/: Makefile.in
native/libdbusmenu/docs/libdbusmenu-gtk/reference/: Makefile.am  Makefile.in  libdbusmenu-gtk-docs.sgml  libdbusmenu-gtk-sections.txt  version.xml
native/libdbusmenu/libdbusmenu-glib/: Makefile.am  Makefile.in  clean-namespaces.xslt  client-marshal.h  client-marshal.list  client-menuitem.c  client.c  dbus-menu-clean.xml  dbusmenu-glib-0.4.pc.in  defaults.c  enum-types.c  enum-types.c.in  enum-types.h  menuitem-marshal.h  menuitem-marshal.list  menuitem-proxy.c  menuitem.c  server-marshal.h  server-marshal.list  server.c
native/libdbusmenu/libdbusmenu-gtk/: Makefile.am  Makefile.in  dbusmenu-gtk-0.4.pc.in  dbusmenu-gtk3-0.4.pc.in  genericmenuitem-enum-types.c  genericmenuitem-enum-types.c.in  genericmenuitem-enum-types.h  genericmenuitem-enum-types.h.in
native/libdbusmenu/m4/: libtool.m4
native/libdbusmenu/po/: Makefile.in.in  POTFILES.in
native/libdbusmenu/tests/: Makefile.am  Makefile.in  dbusmenu-jsonloader-0.4.pc.in  run-xvfb.sh  test-glib-events-client.c  test-glib-events-nogroup-client.c  test-glib-events-server.c  test-glib-layout-client.c  test-glib-layout-server.c  test-glib-layout.h  test-glib-objects.c  test-glib-properties-client.c  test-glib-properties-server.c  test-glib-properties.h  test-glib-proxy-client.c  test-glib-proxy-proxy.c  test-glib-proxy-server.c  test-glib-proxy.h  test-glib-simple-items.c  test-glib-simple-items.py  test-glib-submenu-client.c  test-glib-submenu-server.c  test-glib-submenu.h  test-gtk-label-client.c  test-gtk-label-server.c  test-gtk-objects.c  test-gtk-parser.c  test-gtk-remove-server.c  test-gtk-reorder-server.c  test-gtk-shortcut-client.c  test-gtk-shortcut-client.py  test-gtk-shortcut-server.c  test-gtk-submenu-client.c  test-gtk-submenu-server.c  test-json-01.json  test-json-client.c  test-json-instruction-count  test-json-server.c
native/libdbusmenu/tests/dbusmenu-gtk/: dbusMenuTest
native/libdbusmenu/tests/dbusmenu-gtk/mago_tests/: dbusmenu.py  dbusmenu.xml
native/libdbusmenu/tests/dbusmenu-gtk/mago_tests/data/: blank_label.json  blank_label_2levels.json  blank_submenus.json  dynamic.json  long_label.json  no_id.json  no_label.json  sameid_submenus.json  sameid_submenus_diff_sizes.json  sameid_top_and_submenus.json  sameid_topmenu.json  several_submenus.json  several_submenus_recursive.json  several_submenus_utf8.json  static.json  test-gtk-label.json
native/libdbusmenu/tools/: Makefile.am  Makefile.in  dbusmenu-dumper.c
native/libdbusmenu/tools/testapp/: Makefile.am  Makefile.in
native/repair-utility/: .gitignore  README.md
native/repair-utility/helpers/: ide.go
native/restarter/: Cargo.toml
native/sqlite/: make.sh
template/: README.md.template
template/deb/IC/: desktop.template  launcher.sh
template/deb/IC/control/: control.template
template/deb/PC/: desktop.template  launcher.sh
template/deb/PC/control/: control.template
template/deb/PY/: desktop.template  launcher.sh
template/deb/PY/control/: control.template
template/dekstop/: org.glavo.jetbrains.idea.ic.desktop.template
